--- a/setup.cfg
+++ b/setup.cfg
@@ -27,11 +27,12 @@ package_dir=
 packages=find:
 install_requires =
     PartSeg>=0.10.8
+    cellpose
 
 [options.packages.find]
 where=src
 [options.entry_points]
-PartSeg.plugins=
+PartSegCore.plugins=
     cellpose = PartSeg_cellpose
 
 [flake8]
