--- a/setup.cfg
+++ b/setup.cfg
@@ -1,46 +1,46 @@
 [metadata]
 name = PartSeg_cellpose
 description = PartSeg plugin to use cellpose,
+url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
+author = Grzegorz Bokota
+author_email = g.bokota@cent.uw.edu.pl
+license = BSD-3-Clause
+platforms = Linux, Windows, MacOs
 classifiers =
+    Development Status :: 3 - Alpha
+    License :: OSI Approved :: BSD License
+    Operating System :: OS Independent
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Scientific/Engineering :: Bio-Informatics
-    License :: OSI Approved :: BSD License
-    Operating System :: OS Independent
-    Development Status :: 3 - Alpha
-author = Grzegorz Bokota
-author_email = g.bokota@cent.uw.edu.pl
-url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
-license = BSD-3-Clause
 keywords = bioimaging, cellpose
-platforms = Linux, Windows, MacOs
 project_urls =
     Source Code = https://github.com/4DNucleome/PartSeg_cellpose
 
 [options]
-python_requires = >=3.6
-package_dir=
-    =src
-packages=find:
+packages = find:
 install_requires =
-    PartSeg>=0.10.8
+    PartSeg>=0.11.0b1
     cellpose
+python_requires = >=3.6
+package_dir =
+    =src
+setup_requires =
+    setuptools_scm[toml]>=3.4
 
-[options.packages.find]
-where=src
 [options.entry_points]
-PartSegCore.plugins=
+partsegcore.plugins =
     cellpose = PartSeg_cellpose
 
+[options.packages.find]
+where = src
+
 [flake8]
-# E203  Whitespace before ':'  (sometimes conflicts with black)
-# E501 line too long (84 > 79 characters)  (sometimes too annoying)
-# W503	Line break occurred before a binary operator
-# C901 McCabe complexity test. Would be nice to reenable, but takes work
 max-line-length = 120
 ignore = E203,W503,E501,C901
 max-complexity = 18
-exclude = package/PartSeg/changelog.py, build/**, .eggs/**
+exclude = build/**, .eggs/**
