add basic package information

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = PartSeg_cellpose
 description = PartSeg plugin to use cellpose,
+long_description = file: Readme.md
+long_description_content_type = text/markdown
 url = https://4dnucleome.cent.uw.edu.pl/PartSeg/
 author = Grzegorz Bokota
 author_email = g.bokota@cent.uw.edu.pl
